--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .main__task {
   display: flex;
@@ -117,7 +117,7 @@ input,button{
   width: 226px;
 }
 .main-list__item > .input-text {
-  width: 226px
+  width: 226px;
 }
 .delete__img {
   height: 2em;
@@ -130,18 +130,18 @@ input,button{
 
 /* Completed */
 .list-completed__label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list__main .input-text {
-  display: none
+  display: none;
 }
 
 .edit-mode .input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .list-item__label {
