--- a/style.css
+++ b/style.css
@@ -1,51 +1,65 @@
 /* Basic Style */
+
 .page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header__img {
   width: 100%;
 }
+
 .header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .header { text-align: center;
-}
+  .header { 
+    text-align: center;
+  }
 
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .main__task {
   display: flex;
 }
+
 ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+li,
+h3 {
   list-style: none;
 }
-input,button{
+
+input,
+button {
   outline: none;
 }
+
 .button {
   background: none;
   border: 0px;
@@ -55,10 +69,13 @@ input,button{
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
+
 .title-3 {
   color: #333;
   font-weight: 700;
@@ -68,6 +85,7 @@ input,button{
   margin: 0;
   text-transform: uppercase;
 }
+
 .input-text {
   margin: 0;
   font-size: 18px;
@@ -80,29 +98,33 @@ input,button{
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .input-text:focus {
   color: #333;
 }
 
 /* New Task */
+
 .main-header__label {
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task {
   width: 318px;
 }
 
 /* Task list */
+
 .main-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .main-list__item > * {
   vertical-align: middle;
 }
@@ -110,31 +132,37 @@ input,button{
 .main-list__item > .list-item__checkbox {
   margin: 0 10px;
 }
+
 .main-list__item > .list-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .main-list__item > .input-text {
   width: 226px;
 }
+
 .delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
+
 .list-completed__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
+
 .list__main .input-text {
   display: none;
 }
